# protobuf-test

./: .gitignore  CMakeLists.txt  readme.md
proto/: msg.proto
python/: client.py  server.py
